# project-manager

./: .cursorrules  .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  run.sh  setup.py
prompts/: context.md  reqs.md
src/project_manager/: __main__.py
src/project_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/project_manager/models/: project.py
src/project_manager/services/: project_service.py  script_service.py
src/project_manager/ui/: main_window.bak.py  main_window.py  status_bar.py  window_launcher.py  window_manager.py
src/project_manager/ui/components/: base.py  edit_dialog.py  new_project.py  projects_list.py  toast.py
src/project_manager/utils/: config.py
tests/test_services/: test_script_service.py
