[project]
name = "project-manager"
version = "0.1.0"
description = "Local project management tool for macOS"
requires-python = ">=3.9"
dependencies = [
    "rumps",  # For macOS status bar
    "pymysql>=1.1.0",  # For MySQL database operations
]

[project.scripts]
project-manager = "project_manager.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 